@@ -116,7 +116,7 @@ public class EnemyComponent extends Component {
                 texture.setEffect(null);
             }, javafx.util.Duration.millis(25));
         } else {
-            var originalView = entity.getViewComponent().getChildren().getFirst();
+            var originalView = entity.getViewComponent().getChildren().get(0);
             var originalEffect = originalView.getEffect();
             originalView.setEffect(new javafx.scene.effect.ColorAdjust(0, -1, 1, 0)); // WHITE
             FXGL.getGameTimer().runOnceAfter(() -> {
